src/test/deca/context/invalid/declClass-subClassInParametersOfMethods.context
declClass-subClassInParametersOfMethods.deca:17: